<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:background="#FF470D">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="97dp"
        android:layout_height="99dp"
        android:contentDescription="@string/Result"
        android:src="@drawable/sheet"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Result"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/HINT"
        android:inputType="text"
        android:textColor="@color/black"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="205dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:layout_marginTop="20dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        android:layout_marginTop="20dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button3"
        android:layout_marginTop="20dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button4"
        android:layout_marginTop="20dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button5"
        android:layout_marginTop="20dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button6"
        android:layout_marginTop="20dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button7"
        android:layout_marginTop="20dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/button8"
        tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize" />

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button9"
        android:layout_marginTop="20dp"
        tools:ignore="VisualLintButtonSize" />


</LinearLayout>
